--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "Shyam S Kumar",
   "license": "MIT",
   "dependencies": {
-    "open": "0.0.4"
+    "open": "0.0.4",
+    "request": "~2.30.0",
+    "prompt": "~0.2.12"
   }
 }
