--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "What hub is to Github, bucket is to Bitbucket",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha bucket/tests/"
   },
   "repository": "",
   "keywords": [
@@ -19,5 +19,8 @@
     "request": "2.30.0",
     "prompt": "0.2.12",
     "commander": "2.1.0"
+  },
+  "devDependencies": {
+    "mocha": "1.16.2"
   }
 }
