--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "nodegit": "0.1.0"
   },
   "devDependencies": {
-    "mocha": "1.16.2"
+    "mocha": "1.16.2",
+    "sinon-chai": "2.4.0",
+    "chai": "1.8.1",
+    "sinon": "1.7.3"
   },
   "bin": {
     "bucket": "./bin/bucket.js"
