Changed to stubs. Added dev depndancies.

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "mocha": "1.16.2",
     "sinon-chai": "2.4.0",
     "chai": "1.8.1",
-    "sinon": "1.7.3"
+    "sinon": "1.7.3",
+    "proxyquire": "~0.5.2"
   },
   "bin": {
     "bucket": "./bin/bucket.js"
